// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PilotPromptCreator with review types should contain error in the prompt if previous step failed 1`] = `
"# Next Step Generation and UX, Accessibility, Internationalization Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

2. Creating comprehensive UX, Accessibility, Internationalization reports that include a review, findings, and a score.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

No snapshot image is attached for this intent.

### Previous Steps

#### Step 1
- Screen Name : "default 1"
- Intent: "navigate to login screen"

#### Step 2
- Screen Name : "default 2"
- Intent: "enter username"
- Error occurred in your previous attempt. Try another approach to perform this step. Error message:
\`\`\`
Failed to enter username
\`\`\`


## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.

3. **Review Reports**: Create comprehensive review reports for each applicable section (e.g., UX, Accessibility, Internationalization) that include a summary, findings, and a score.

### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.
11. Also, provide comprehensive overall UX, Accessibility, Internationalization reviews with total scores, given all the screens seen in previous steps, inside the respective review sections.
12. For each applicable review section (UX, Accessibility, Internationalization), create a comprehensive report enclosed within corresponding tags (e.g., <UX>, <ACCESSIBILITY>, <INTERNATIONALIZATION>), including a summary, findings, and a score out of 10.
13. Ensure each section is clearly labeled and formatted as shown in the examples.
14. If you cannot determine the next action due to ambiguity or missing information, throw an informative error explaining the problem in one sentence.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain UX, Accessibility, Internationalization open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   <UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator with review types should create a prompt for an intent correctly with additional review types 1`] = `
"# Next Step Generation and UX, Accessibility, Internationalization Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

2. Creating comprehensive UX, Accessibility, Internationalization reports that include a review, findings, and a score.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

A snapshot image is attached for visual reference.

## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.

3. **Review Reports**: Create comprehensive review reports for each applicable section (e.g., UX, Accessibility, Internationalization) that include a summary, findings, and a score.

### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy and the snapshot image to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.
11. Also, provide comprehensive overall UX, Accessibility, Internationalization reviews with total scores, given all the screens seen in previous steps, inside the respective review sections.
12. For each applicable review section (UX, Accessibility, Internationalization), create a comprehensive report enclosed within corresponding tags (e.g., <UX>, <ACCESSIBILITY>, <INTERNATIONALIZATION>), including a summary, findings, and a score out of 10.
13. Ensure each section is clearly labeled and formatted as shown in the examples.
14. If you cannot determine the next action due to ambiguity or missing information, throw an informative error explaining the problem in one sentence.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain UX, Accessibility, Internationalization open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   <UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator with review types should handle when no snapshot image is attached 1`] = `
"# Next Step Generation and UX, Accessibility, Internationalization Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

2. Creating comprehensive UX, Accessibility, Internationalization reports that include a review, findings, and a score.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "expect button to be visible"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

No snapshot image is attached for this intent.

## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "expect button to be visible"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.

3. **Review Reports**: Create comprehensive review reports for each applicable section (e.g., UX, Accessibility, Internationalization) that include a summary, findings, and a score.

### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.
11. Also, provide comprehensive overall UX, Accessibility, Internationalization reviews with total scores, given all the screens seen in previous steps, inside the respective review sections.
12. For each applicable review section (UX, Accessibility, Internationalization), create a comprehensive report enclosed within corresponding tags (e.g., <UX>, <ACCESSIBILITY>, <INTERNATIONALIZATION>), including a summary, findings, and a score out of 10.
13. Ensure each section is clearly labeled and formatted as shown in the examples.
14. If you cannot determine the next action due to ambiguity or missing information, throw an informative error explaining the problem in one sentence.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain UX, Accessibility, Internationalization open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   <UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator with review types should include previous intents in the context 1`] = `
"# Next Step Generation and UX, Accessibility, Internationalization Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

2. Creating comprehensive UX, Accessibility, Internationalization reports that include a review, findings, and a score.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

No snapshot image is attached for this intent.

### Previous Steps

#### Step 1
- Screen Name : "default 1"
- Intent: "navigate to login screen"

#### Step 2
- Screen Name : "default 2"
- Intent: "enter username"


## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.

3. **Review Reports**: Create comprehensive review reports for each applicable section (e.g., UX, Accessibility, Internationalization) that include a summary, findings, and a score.

### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.
11. Also, provide comprehensive overall UX, Accessibility, Internationalization reviews with total scores, given all the screens seen in previous steps, inside the respective review sections.
12. For each applicable review section (UX, Accessibility, Internationalization), create a comprehensive report enclosed within corresponding tags (e.g., <UX>, <ACCESSIBILITY>, <INTERNATIONALIZATION>), including a summary, findings, and a score out of 10.
13. Ensure each section is clearly labeled and formatted as shown in the examples.
14. If you cannot determine the next action due to ambiguity or missing information, throw an informative error explaining the problem in one sentence.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain UX, Accessibility, Internationalization open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   <UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator with review types should not contain error in the prompt if it was not in the immediate previous step 1`] = `
"# Next Step Generation and UX, Accessibility, Internationalization Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

2. Creating comprehensive UX, Accessibility, Internationalization reports that include a review, findings, and a score.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

No snapshot image is attached for this intent.

### Previous Steps

#### Step 1
- Screen Name : "default 1"
- Intent: "navigate to login screen"

#### Step 2
- Screen Name : "default 2"
- Intent: "enter username"


## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.

3. **Review Reports**: Create comprehensive review reports for each applicable section (e.g., UX, Accessibility, Internationalization) that include a summary, findings, and a score.

### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.
11. Also, provide comprehensive overall UX, Accessibility, Internationalization reviews with total scores, given all the screens seen in previous steps, inside the respective review sections.
12. For each applicable review section (UX, Accessibility, Internationalization), create a comprehensive report enclosed within corresponding tags (e.g., <UX>, <ACCESSIBILITY>, <INTERNATIONALIZATION>), including a summary, findings, and a score out of 10.
13. Ensure each section is clearly labeled and formatted as shown in the examples.
14. If you cannot determine the next action due to ambiguity or missing information, throw an informative error explaining the problem in one sentence.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain UX, Accessibility, Internationalization open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   <UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>

<UX>
<SUMMARY>
The product catalog page has some ux considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant ux improvements.
</SCORE>
</UX>

<ACCESSIBILITY>
<SUMMARY>
The product catalog page has some accessibility considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant accessibility improvements.
</SCORE>
</ACCESSIBILITY>

<INTERNATIONALIZATION>
<SUMMARY>
The product catalog page has some internationalization considerations.
</SUMMARY>
<FINDINGS>
  - The product catalog makes some "Add to Cart" buttons require scrolling to access.
  - The notification confirms addition but lacks visual excitement and product imagery.
  - Text-background contrast on product prices is low - Improve contrast with a darker font or background highlight.
</FINDINGS>
<SCORE>
4/10 - The flow needs significant internationalization improvements.
</SCORE>
</INTERNATIONALIZATION>

#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator without review types should create a prompt for an intent correctly without additional review types 1`] = `
"# Next Step Generation Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

A snapshot image is attached for visual reference.

## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.



### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy and the snapshot image to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain undefined open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>



#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>



#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>



#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;

exports[`PilotPromptCreator without review types should include previous intents in the context 1`] = `
"# Next Step Generation Reporting

You are an AI assistant tasked with:

1. Predicting the next optimal action a user should take within an application to progress towards a specific goal or to declare success.
   Please generate a one-line string that precisely describes the next action the user should take to move closer to their goal,
   and another string (which can be greater than one line) which describes your thoughts while creating the step.
   If the goal has been reached, return a one word action 'success'. 
   If it is not possible to determine the next action, and you tried and failed, throw an error.
   If there are any active loaders, spinners, animations, or partially rendered content in the screen, return "wait 3000" as the action.

Please adhere to the instructions below to provide detailed and helpful responses.

## Context

### Goal: "tap button"

### View Hierarchy

\`\`\`
<View><Button testID="submit" title="Submit" /></View>
\`\`\`

### Snapshot Image

No snapshot image is attached for this intent.

### Previous Steps

#### Step 1
- Screen Name : "default 1"
- Intent: "navigate to login screen"

#### Step 2
- Screen Name : "default 2"
- Intent: "enter username"


## Instructions

Your tasks are as follows:

1. **Next Action Prediction**: Generate a one-line string that precisely describes the next action the user should take to move closer to their goal: "tap button"

2. **Thought Process**: Provide a detailed description (which can be more than one line) of your thought process while determining the next action.



### Please follow these steps carefully:

1. Analyze the provided goal, view hierarchy, and previous steps to understand the user's progress and available actions.
2. Check if there are any active loaders, spinners, animations, or partially rendered content in the view hierarchy - if so, the next action should be to wait for 3 seconds ('wait 3000').
3. Consider the elements present in the view hierarchy to determine possible next actions.
4. Determine the optimal next action the user should take to move closer to their goal.
5. Always describe the next action using plain, natural language rather than technical terms. Avoid using elements like coordinates or test IDs.
6. Ensure the action is directly related to available elements in the view hierarchy.
7. Make sure to create a unique screen name enclosed with <SCREENDESCRIPTION> blocks according to the snapshot and view.
8. Generate a one-line string that precisely describes this next action, enclosed within \`<ACTION>\` tags.
9. Provide a detailed description of your thought process enclosed within \`<THOUGHTS>\` tags.
10. If the goal is achieved, add a \`<SUMMARY>\` block inside the \`<THOUGHTS>\` section, summarizing the overall flow and findings.

### Verify the Prompt

Before generating your response, please review the provided context and instructions to ensure they are clear and unambiguous.
If you encounter any issues or have questions, please throw an informative error explaining the problem in one sentence.

### Examples for Answer Formats

Given goal: 'Add a product to the shopping cart and validate it was added correctly.' The review must contain undefined open and close tags.

#### Next Action with Thoughts:

<SCREENDESCRIPTION>
Products Catalog Page
</SCREENDESCRIPTION>
<THOUGHTS>
I need to add a product to the shopping cart. The page displays multiple products in a grid layout, each with an image, name, price, and an "Add to Cart" button. The red dress in the second position looks like a good option to add to the cart.
</THOUGHTS>
<ACTION>
Tap on the 'Add to Cart' button beneath the red dress product
</ACTION>



#### Intermediate Step - Cart Notification:

<SCREENDESCRIPTION>
Product Added Notification Overlay
</SCREENDESCRIPTION>
<THOUGHTS>
A notification has appeared at the top of the screen confirming the red dress was added. Now I need to check the cart to verify the product was added correctly. There's a "View Cart" button in the notification and a cart icon in the header.
</THOUGHTS>
<ACTION>
Tap on the "View Cart" button in the notification
</ACTION>

   

#### Example of Success - Validation Complete:

<SCREENDESCRIPTION>
Shopping Cart Page
</SCREENDESCRIPTION>
<THOUGHTS>
I can now see the shopping cart page with the red dress that was added. The product appears with its image, name "Red Cocktail Dress", price "$49.99", and quantity set to 1. The cart subtotal shows "$49.99" which matches the product price. This confirms the product was successfully added to the cart with the correct details.
<SUMMARY>
The goal has been successfully achieved. I added the red dress to the shopping cart and verified it appears correctly with the right details. The flow provided clear feedback at each step, though there were opportunities to improve the messaging and layout.
</SUMMARY>
</THOUGHTS>
<ACTION>
success
</ACTION>



#### Additional Example:

<SCREENDESCRIPTION>
User Profile Screen.
</SCREENDESCRIPTION>
<THOUGHTS>
To view the user profile, selecting the 'Profile' icon (ID: icon_profile) is required.
</THOUGHTS>
<ACTION>
Select the 'Profile' icon (ID: icon_profile)
</ACTION>



#### Example of Throwing an Informative Error:

\`\`\`
Error: Unable to determine the next action due to insufficient information in the view hierarchy.
\`\`\`

Please provide your response below:"
`;
